--- a/order-service.properties
+++ b/order-service.properties
@@ -1,9 +1,9 @@
-server.port=8081
+server.port=8085
 
 #Data base properties
-spring.datasource.url=jdbc:mysql://192.168.1.100:3306/pms_lifeline_test
-spring.datasource.username=root
-spring.datasource.password=exel$qwerty@2015
+spring.datasource.url=jdbc:mysql://14.192.14.195:3323/pms_nexgen
+spring.datasource.username=serveruser
+spring.datasource.password=nexgen$123
 spring.jpa.hibernate.show_sql=true
 
 
