--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -1,1 +1,4 @@
-server.port=8090
+server.port=9999
+
+#spring.cloud.stream.bindings.outboundOrders.destination=orders
+#spring.cloud.stream.bindings.outboundOrders.content-type= application/json
