--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 logging.level.org.springframework.security=DEBUG
 logging.level.com.netflix.eureka=OFF
 logging.level.com.netflix.discovery=OFF
-
-eureka.client.serviceUrl.defaultZone=http://eureka-service:8761/eureka/
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=90000
+#eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka/
